<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <ImageView
        android:id="@+id/imageGameLogo"
        android:layout_width="126dp"
        android:layout_height="126dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/buttonmashlogo"
        tools:ignore="ContentDescription" />


    <TextView
        android:id="@+id/textGameName"
        android:layout_width="248dp"
        android:layout_height="98dp"
        android:layout_marginStart="8dp"
        android:gravity="top"
        android:text="@string/name_rock_paper_scissors"
        android:textColor="@color/colorAccent"
        android:textSize="42sp"
        app:layout_constraintStart_toEndOf="@+id/imageGameLogo"
        app:layout_constraintTop_toTopOf="@+id/imageGameLogo" />

    <TextView
        android:id="@+id/textPlayerNumber"
        android:layout_width="208dp"
        android:layout_height="28dp"
        android:layout_marginStart="48dp"
        android:text="@string/player_one"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageGameLogo"
        app:layout_constraintStart_toEndOf="@+id/imageGameLogo" />

    <TextView
        android:id="@+id/textGameInstructions"
        android:layout_width="368dp"
        android:layout_height="332dp"
        android:layout_marginTop="8dp"
        android:text="@string/instruction_tic_tac_toe"
        android:textColor="@color/colorAccent"
        android:textSize="29sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageGameLogo" />

    <Button
        android:id="@+id/buttonReady"
        android:layout_width="368dp"
        android:layout_height="74dp"
        android:background="@drawable/buttonborder"
        android:contentDescription="@string/ready_btn"
        android:text="@string/ready_btn"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textGameInstructions"
        app:layout_constraintVertical_bias="0.42000002" />

</android.support.constraint.ConstraintLayout>